changed script linking

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
 	<div id="container"></div>
 	<script src="scripts/js/three.min.js"></script>
-	<script src="../common/scripts/js/CCapture.min.js"></script>
-	<script src="../common/scripts/js/gif.js"></script>
-	<script src="../common/scripts/js/Whammy.js"></script>
+	<script src="scripts/js/CCapture.min.js"></script>
+	<script src="scripts/js/gif.js"></script>
+	<script src="scripts/js/Whammy.js"></script>
 	<script src="scripts/js/OrbitControls.js"></script>
 	<script src="scripts/js/Buffer.js"></script>
 	<script src="scripts/js/Camo.js"></script>
